app/assets/stylesheets/elements/card.scss
/* card */

.card {
  padding: $baseline 0;
  &.divide {
    border-bottom: $border-width-thin $border-style $black;
  }
  + .card {
    margin-top: -$border-width;
  }
  &.route {
    border-bottom: none;
    padding-top: 0;
    padding-bottom: 0;
    section {
      margin-bottom: $baseline*0.25;
    }
  }
  .info {
    line-height: $baseline;
    .fa-circle-o {
      text-align: left;
    }
    .profile-img {
      margin: 0;
      width: 100%; 
    }
    &.profile + .right {
      float: right;
      margin-right: $gutter;
    }
    &.extra {
      color: $black;
      font-size: $tiny;
      line-height: $tight;
      margin-top: $baseline*0.5;
      margin-bottom: $baseline*0.5;
    }
    &.right {
      text-align: right;
      line-height: $icon;
      .fa-angle-right {
        margin-left: $baseline*0.5;
      }
    }
  }
}

.card.profile {
  position: relative;
  &:after {
    background: $brand;
    content: '';
    width: 200%;
    position: absolute;
    top: -$baseline;
    left: -50%;
    bottom: 0;
    border-radius: 100%;
    z-index: -100;
  }
}

.key {
  .card {
      padding: $baseline*0.5 0;
      border-bottom: none;
    .info {
      &.extra {
        margin-top: 0;
      }
    }
    &.route {
      &.extra {
        line-height: $icon;
      }
    }
  }
}

